# portable-lce

./: .clang-format  .git-blame-ignore-revs  .gitattributes  .gitignore  AABB_8cpp_source.html  AABB_8h_source.html  Abilities_8cpp_source.html  Abilities_8h_source.html  AbsoptionMobEffect_8cpp_source.html  AbsoptionMobEffect_8h_source.html  AbstractBeaconButton_8cpp_source.html  AbstractBeaconButton_8h_source.html  AbstractContainerMenu_8cpp_source.html  AbstractContainerMenu_8h_source.html  AbstractContainerScreen_8cpp_source.html  AbstractContainerScreen_8h_source.html  AbstractProjectileDispenseBehavior_8cpp_source.html  AbstractProjectileDispenseBehavior_8h_source.html  AbstractTexturePack_8cpp_source.html  AbstractTexturePack_8h_source.html  AchievementPopup_8cpp_source.html  AchievementPopup_8h_source.html  AchievementScreen_8cpp_source.html  AchievementScreen_8h_source.html  Achievement_8cpp_source.html  Achievement_8h_source.html  Achievements_8cpp_source.html  Achievements_8h_source.html  AddEnchantmentRuleDefinition_8cpp_source.html  AddEnchantmentRuleDefinition_8h_source.html  AddEntityPacket_8cpp_source.html  AddEntityPacket_8h_source.html  AddExperienceOrbPacket_8cpp_source.html  AddExperienceOrbPacket_8h_source.html  AddGlobalEntityPacket_8cpp_source.html  AddGlobalEntityPacket_8h_source.html  AddIslandLayer_8cpp_source.html  AddIslandLayer_8h_source.html  AddItemRuleDefinition_8cpp_source.html  AddItemRuleDefinition_8h_source.html  (+9335 more)
4jlibs/builddef/: header_smoke.cpp  meson.build
Minecraft.Client/: ArchiveFile.h  CMakeLists.txt  ClientConstants.cpp  ClientConstants.h  DLCTexturePack.cpp  Extrax64Stubs.cpp  LevelRenderer.h  LocalPlayer.cpp  Minecraft.cpp  Minecraft.h  MinecraftServer.cpp  MinecraftServer.h  MobRenderer.cpp  Network Implementation Notes.md  PendingConnection.cpp  PlayerConnection.cpp  PlayerConnection.h  PlayerRenderer.cpp  Textures.cpp  Textures.h  TrackedEntity.cpp  meson.build  really_good_cpp.cpp  stdafx.h
Minecraft.Client/Commands/: TeleportCommand.cpp  TeleportCommand.h
Minecraft.Client/Common/: Console_Utils.cpp  Consoles_App.cpp  Consoles_App.h
Minecraft.Client/GameState/: CreativeMode.cpp  CreativeMode.h  DemoMode.cpp  DemoUser.cpp  DemoUser.h  DispenserBootstrap.cpp  DispenserBootstrap.h  GameMode.cpp  GameMode.h  Options.cpp  Options.h  Settings.cpp  Settings.h  StatsCounter.cpp  StatsCounter.h  StatsSyncer.h  SurvivalMode.cpp  SurvivalMode.h
Minecraft.Client/Input/: ConsoleInput.cpp  ConsoleInput.h  ConsoleInputSource.h  Input.cpp  Input.h  KeyMapping.cpp  KeyMapping.h
Minecraft.Client/Level/: DemoLevel.cpp  DemoLevel.h  DerivedServerLevel.cpp  DerivedServerLevel.h  MultiPlayerLevel.cpp  MultiPlayerLevel.h  ServerLevel.cpp  ServerLevel.h  ServerLevelListener.cpp  ServerLevelListener.h
Minecraft.Client/Linux/: LinuxStubs.h  Linux_App.cpp  xbox_valve.h
Minecraft.Client/Network/: ClientConnection.cpp  ClientConnection.h  MultiPlayerChunkCache.cpp  MultiPlayerChunkCache.h  PendingConnection.cpp  PendingConnection.h  PlayerChunkMap.cpp  PlayerChunkMap.h  PlayerConnection.cpp  PlayerConnection.h  PlayerList.cpp  PlayerList.h  ServerChunkCache.cpp  ServerChunkCache.h  ServerCommandDispatcher.cpp  ServerCommandDispatcher.h  ServerConnection.cpp  ServerConnection.h  ServerScoreboard.cpp  ServerScoreboard.h
Minecraft.Client/Platform/: Extrax64Stubs.cpp  extraX64client.h  stdafx.h  stubs.cpp  stubs.h
Minecraft.Client/Player/: EntityTracker.cpp  EntityTracker.h  LocalPlayer.cpp  LocalPlayer.h  MultiPlayerGameMode.cpp  MultiPlayerGameMode.h  MultiPlayerLocalPlayer.cpp  MultiPlayerLocalPlayer.h  RemotePlayer.cpp  RemotePlayer.h  ServerPlayer.cpp  ServerPlayer.h  ServerPlayerGameMode.cpp  ServerPlayerGameMode.h  TrackedEntity.cpp  TrackedEntity.h  User.cpp  User.h
Minecraft.Client/Rendering/: Camera.cpp  Camera.h  Chunk.cpp  Chunk.h  Cube.cpp  Cube.h  Frustum.cpp  Frustum.h  FrustumCuller.cpp  FrustumCuller.h  FrustumData.cpp  FrustumData.h  GameRenderer.cpp  GameRenderer.h  LevelRenderer.cpp  LevelRenderer.h  Lighting.cpp  Minimap.cpp  Minimap.h  OffsettedRenderList.cpp  OffsettedRenderList.h  Polygon.cpp  Polygon.h  Tesselator.cpp  Tesselator.h  TexOffs.cpp  Vertex.cpp  Vertex.h  glWrapper.cpp
Minecraft.Client/Textures/: BufferedImage.cpp  BufferedImage.h  ClockTexture.cpp  ClockTexture.h  CompassTexture.cpp  CompassTexture.h  HttpTexture.cpp  HttpTexture.h  MemTexture.cpp  MemTextureProcessor.h  MobSkinMemTextureProcessor.cpp  MobSkinMemTextureProcessor.h  MobSkinTextureProcessor.cpp  ResourceLocation.h  Texture.cpp  Texture.h  TextureAtlas.cpp  TextureAtlas.h  TextureHolder.cpp  TextureHolder.h  TextureManager.cpp  TextureManager.h  Textures.cpp  Textures.h
Minecraft.Client/UI/: AbstractBeaconButton.cpp  AbstractBeaconButton.h  BeaconCancelButton.cpp  BeaconCancelButton.h  BeaconConfirmButton.cpp  BeaconPowerButton.cpp  BeaconPowerButton.h  BossMobGuiInfo.cpp  BossMobGuiInfo.h  Button.cpp  Button.h  EditBox.cpp  EditBox.h  Font.cpp  Font.h  Gui.cpp  Gui.h  GuiComponent.cpp  GuiComponent.h  GuiMessage.cpp  GuiMessage.h  Rect2i.cpp  Screen.cpp  Screen.h  ScreenSizeCalculator.cpp  ScrolledSelectionList.cpp  ScrolledSelectionList.h  (+8 more)
Minecraft.World/: AddEntityPacket.cpp  AddGlobalEntityPacket.cpp  AddMobPacket.cpp  AddPlayerPacket.cpp  Animal.cpp  AnimatePacket.cpp  BlockRegionUpdatePacket.cpp  BucketItem.cpp  C4JThread.cpp  CMakeLists.txt  ChunkTilesUpdatePacket.cpp  ClientCommandPacket.cpp  Command.cpp  CommandDispatcher.cpp  CompoundTag.h  CompressedTileStorage.h  Connection.cpp  ConsoleSaveFileConverter.cpp  ConsoleSaveFileInputStream.cpp  ConsoleSaveFileOriginal.cpp  ConsoleSaveFileSplit.cpp  ContainerAckPacket.cpp  ContainerButtonClickPacket.cpp  ContainerClickPacket.cpp  ContainerClosePacket.cpp  ContainerOpenPacket.cpp  ContainerSetContentPacket.cpp  ContainerSetDataPacket.cpp  ContainerSetSlotPacket.cpp  ControlledByPlayerGoal.h  CustomPayloadPacket.cpp  DataInputStream.cpp  Dimension.cpp  DurangoStats.cpp  EnchantItemCommand.cpp  EnderDragon.cpp  EnderMan.cpp  Entity.cpp  Entity.h  EntityActionAtPositionPacket.cpp  (+55 more)
(+9242 files in other folders)
