project(
  '4jcraft',
  ['cpp', 'c'],
  version: '0.1.0',
  meson_version: '>= 1.3',
  default_options: [
    'cpp_std=c++23',
    'warning_level=0',
    'buildtype=debugoptimized', # for now
    'unity=on', # merge source files per target
    'unity_size=8', # TODO: mess around with this
    'b_pch=true', # precompiled headers
  ],
)

pymod = import('python')
python = pymod.find_installation('python3', required: true)

cc = meson.get_compiler('cpp')
lib_dir = meson.current_source_dir() / 'thirdparty/lib' / host_machine.system() / host_machine.cpu()
inc_dir = 'thirdparty/include' / host_machine.system()

global_cpp_defs = [
  '-DSPLIT_SAVES',
  '-D_LARGE_WORLDS',
  '-D_EXTENDED_ACHIEVEMENTS',
  '-D_DEBUG_MENUS_ENABLED',
  '-D_DEBUG',
  '-D_FORTIFY_SOURCE=2',
  '-DDEBUG',
]

if host_machine.system() == 'linux' or host_machine.system() == 'android'
  global_cpp_defs += ['-Dlinux', '-D__linux', '-D__linux__']
endif

if host_machine.system() == 'android'
  global_cpp_defs += ['-D__android__']
endif

if get_option('renderer') == 'gles'
  global_cpp_defs += ['-DGLES']
  if host_machine.system() == 'android'
    gl_dep = cc.find_library('GLESv3', required: true )
  else
    gl_dep = dependency('glesv2', required: true)
  endif
  glu_dep = dependency('', required: false)
else
  gl_dep = dependency('gl', required: true)
  glu_dep = dependency('glu', required: true)
endif

if get_option('enable_vsync')
  global_cpp_defs += ['-DENABLE_VSYNC']
endif

if get_option('classic_panorama')
    global_cpp_defs += '-DCLASSIC_PANORAMA'
endif

if get_option('enable_frame_profiler')
  global_cpp_defs += ['-DENABLE_FRAME_PROFILER']
endif

if get_option('ui_backend') == 'shiggy'
  global_cpp_defs += ['-D_ENABLEIGGY']
endif

if get_option('ui_backend') == 'java'
  global_cpp_defs += '-DENABLE_JAVA_GUIS'
endif

add_project_arguments(global_cpp_defs, language: ['cpp', 'c'])

global_cpp_args = [
  '-Wshift-count-overflow',
  '-pipe',
]
add_project_arguments(global_cpp_args, language: 'cpp')

if host_machine.system() == 'android'
  sdl2_dep = declare_dependency(
    dependencies: cc.find_library('SDL2', dirs: lib_dir, required: true ), 
    include_directories: inc_dir)
else
  sdl2_dep = dependency('sdl2')
endif
thread_dep = dependency('threads')
dl_dep = cc.find_library('dl', required: true)

if host_machine.system() == 'android'
  glm_dep  = declare_dependency(include_directories: inc_dir)
else
  glm_dep = dependency('glm')
endif

stb = subproject('stb').get_variable('stb_inc')
stb_dep = declare_dependency(include_directories: stb)

miniaudio_dep = dependency('miniaudio')

subdir('targets/util')
subdir('targets/java')
subdir('targets/nbt')
subdir('targets/platform')

subdir('targets/resources')
subdir('targets/minecraft')
subdir('targets/app')
