option(
  'ui_backend',
  type: 'combo',
  choices: ['shiggy', 'java'],
  value: 'shiggy',
  description: 'Specifies a backend implementation for the game UI.',
)

option('classic_panorama',
  type : 'boolean', 
  value : false, 
  description : 'Enable classic java edition panorama (ui_backend=java ONLY).')

option(
  'renderer',
  type: 'combo',
  choices: ['gl3', 'gles'],
  value: 'gl3',
  description: 'Specifies a rendering implementation for the game.',
)

option(
  'enable_vsync',
  type: 'boolean',
  value: true,
  description: 'Toggles V-Sync and adds options to unlock maximum in-game framerate.',
)